// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup Renders container with children when multiple children are passed in 1`] = `
<div>
  <div
    class="box flexWrap marginBottomN1 marginEndN1 marginStartN1 marginTopN1 xsDisplayFlex"
  >
    <div
      class="box paddingX1 paddingY1"
    >
      <button
        class="button hideOutline inline accessibilityOutline parentButton"
        tabindex="0"
        type="button"
      >
        <div
          class="button hideOutline inline accessibilityOutline tapTransition md gray enabled childrenDiv"
        >
          <div
            class="Text fontSize300 defaultText alignCenter fontWeightSemiBold"
          >
            Button 1
          </div>
        </div>
      </button>
    </div>
    <div
      class="box paddingX1 paddingY1"
    >
      <button
        class="button hideOutline inline accessibilityOutline parentButton"
        tabindex="0"
        type="button"
      >
        <div
          class="button hideOutline inline accessibilityOutline tapTransition md gray enabled childrenDiv"
        >
          <div
            class="Text fontSize300 defaultText alignCenter fontWeightSemiBold"
          >
            Button 2
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ButtonGroup Renders nothing when no children are passed in 1`] = `<div />`;

exports[`ButtonGroup Renders the child without container when 1 child is passed in 1`] = `
<div>
  <div
    class="box flexWrap marginBottomN1 marginEndN1 marginStartN1 marginTopN1 xsDisplayFlex"
  >
    <div
      class="box paddingX1 paddingY1"
    >
      <button
        class="button hideOutline inline accessibilityOutline parentButton"
        tabindex="0"
        type="button"
      >
        <div
          class="button hideOutline inline accessibilityOutline tapTransition md gray enabled childrenDiv"
        >
          <div
            class="Text fontSize300 defaultText alignCenter fontWeightSemiBold"
          >
            Button 1
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
